crates/reze_compiler/tests/snapshots/snapshots__server__native_spread.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <div {...attrs} class=\"x\" ref={el}>{kids()}</div>;"
---
import { ssr as _$ssr, ssrHydrationKey as _$ssrHydrationKey, ssrSpread as _$ssrSpread, mergeProps as _$mergeProps, ssrChild as _$ssrChild } from "reze-js";
const _tmpl$ = ["<div", "", ">", "</div>"];
const a = _$ssr(_tmpl$, _$ssrHydrationKey(), _$ssrSpread(_$mergeProps(attrs, { class: "x" }), false), _$ssrChild(kids()));
